--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ authors = ["Jorn van Wier <jornvanwier@gmail.com>"]
 [dependencies]
 rocket = "*"
 rocket_codegen = "*"
+serde = "0.9"
+serde_derive = "0.9"
+serde_json = "0.9"
 
 [dependencies.rocket_contrib]
 version = "*"
